# libstruct

./: CMakeLists.txt  Doxyfile-cs  SConstruct  UpgradeLog.htm  UpgradeLog2.htm  common.pri  configure.bat  generateVSProjects.bat  libstruct-vs2008.sln  libstruct.pro
.svn/: wc.db
Backup/: libstruct-vs2008.sln
Backup1/: libstruct-vs2008.sln
Backup1/LibStructuralCSharp/: LibStructuralCSharp.csproj  QRResult.cs  StructuralAnalysis.cs
Backup1/LibStructuralCSharp/Properties/: AssemblyInfo.cs
LibLA/: libla-vs2003-static.vcproj  libla.cpp  util.cpp
LibStructural/: LibStructural.pro  UpgradeLog.htm  fluxbalance.cpp  libstructural.cpp  sbmlmodel.cpp
LibStructural-static/: LibStructural-static.pro
LibStructuralCSharp/: Complex.cs  LUResult.cs  LibStructuralCSharp-vs2005.csproj  LibStructuralCSharp.csproj
SBW_CLAPACK/: CMakeLists.txt  SBW_CLAPACK.pro  program.cpp  sbwutil.h
SBW_Structural/: CMakeLists.txt  SBW_Structural.pro  sbwstructural.cpp  sbwstructural.h
SWIG/: createWrapper.sh  java.i  libstructural.i  libstructural_wrap_python.cpp
SWIG/python/: structural.py
SWIG_24/: libstructural.i  libstructural_wrap_python.cpp
TestLibStruct/: TestLibStruct-vs2003.vcproj  TestLibStruct-vs2008.vcproj  TestLibStruct-vs2008.vcxproj  TestLibStruct-vs2008.vcxproj.filters
TestProject_2017/LibStructMain/: LibStructMain.sln
TestProject_2017/LibStructMain/LibStructMain/: LibStructMain.cpp  LibStructMain.vcxproj  LibStructMain.vcxproj.filters
TestProject_2017/LibStructMain/LibStructMain/Debug/: vc141.idb
TestProject_2017/LibStructMain/LibStructMain/Debug/LibStructMain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LibStructMain.lastbuildstate
TestProject_2017/LibStructMain/LibStructMain/Release/LibStructMain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LibStructMain.lastbuildstate
build_x64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
dependencies/lib/: blas.lib  liblpsolve55.lib
doc-c/html/: constraint_8cpp.html  dir_1afb3d56e1abb59d99ac3d455cee0a21.html  dir_3033594964cb750f6b4114da55e9651f.html  dir_6c17648ef09cec91b866e5c1951578f8.html  dir_943a590d2534e8dcb1fca774685a7cb2.html  dir_d522931ffa1371640980b621734a4381.html  dir_e0e46e028fcdb95560c6085655220ac6.html  dir_e7d012a5d775832bc21df2323c53ddb9.html  dir_ff537cce3a4896bcc58706790d03b202.html  examples.html  examples_2c_2loadlabelledstoichiometry_8c-example.html  examples_2c_2loadsbmlfromfile_8c-example.html  examples_2c_2loadstoichiometry_8c-example.html  files.html  fluxbalance_8cpp.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  libstructural_8cpp.html  libstructural_8h.html  lpresult_8cpp.html  menudata.js  objective_8cpp.html  sbmlmodel_8cpp.html
doc-c/latex/: Makefile  constraint_8cpp.tex  dir_1afb3d56e1abb59d99ac3d455cee0a21.tex  dir_3033594964cb750f6b4114da55e9651f.tex  dir_6c17648ef09cec91b866e5c1951578f8.tex  dir_943a590d2534e8dcb1fca774685a7cb2.tex  dir_d522931ffa1371640980b621734a4381.tex  dir_e0e46e028fcdb95560c6085655220ac6.tex  dir_e7d012a5d775832bc21df2323c53ddb9.tex  dir_ff537cce3a4896bcc58706790d03b202.tex  examples.tex  examples_2c_2loadlabelledstoichiometry_8c-example.tex  examples_2c_2loadsbmlfromfile_8c-example.tex  examples_2c_2loadstoichiometry_8c-example.tex  files.tex  fluxbalance_8cpp.tex  index.tex  libstructural_8cpp.tex  libstructural_8h.tex  lpresult_8cpp.tex  make.bat  objective_8cpp.tex  refman.tex  sbmlmodel_8cpp.tex
example-models/: test10.xml  test11.xml  test14.xml  test2.xml  test3.xml  test4.xml  test5.xml  test7.xml  test8.xml
examples/cpp/: testlu.pro  testrcond.cpp  testrcond.pro
include/: complex.h  constraint.h  f2c.h  libla.h  libstructural.h  matrix.h
lp_solve_5.5/: Makefile
lp_solve_5.5/lp_solve/: Makefile.msc
lp_solve_5.5/lpsolve55/: lpsolve.res
